[package]
name = "rs-nonamerl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.11.0"
macroquad = "0.4.2"
morton-encoding = "2.0.0"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
console_log = { version = "1.0.0", features = ["color"] }
noise = "0.8.2"
